--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -2,6 +2,7 @@
   "author": "Rob Frampton <rob.g.frampton@gmail.com> (https://github.com/Robert-Frampton)",
   "dependencies": {
     "async": "^0.9.0",
+    "browser-sync": "^2.24.4",
     "compass-mixins": "^0.12.8",
     "convert-bootstrap-2-to-3": "^1.0.1",
     "cross-spawn": "^2.2.3",
@@ -16,6 +17,7 @@
     "gulp-help": "^1.6.1",
     "gulp-if": "^2.0.2",
     "gulp-inject": "^2.2.0",
+    "gulp-insert": "^0.5.0",
     "gulp-liferay-r2-css": "^0.0.2",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^0.8.0",
@@ -46,7 +48,7 @@
   "devDependencies": {
     "bluebird": "^3.3.4",
     "gogo-shell-helper": "^0.0.8",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sass": "^3.1.0"
   },
