--- a/packages/liferay-npm-bridge-generator/package.json
+++ b/packages/liferay-npm-bridge-generator/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "liferay-npm-bridge-generator",
-	"version": "2.0.0-rc.4",
+	"version": "2.0.0",
 	"description": "A CLI utility to generate module bridges (modules that re-export other modules).",
 	"bin": {
 		"liferay-npm-bridge-generator": "bin/liferay-npm-bridge-generator.js"
