--- a/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
+++ b/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "liferay-npm-bundler-plugin-replace-browser-modules",
-	"version": "2.0.0-rc.4",
+	"version": "2.0.0",
 	"description": "A liferay-npm-bundler plugin to replace files listed under the browser/module entry of package.json files.",
 	"main": "lib/index.js",
 	"scripts": {
