--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -37,6 +37,7 @@
     "npm-keyword": "^4.2.0",
     "package-json": "^1.2.0",
     "plugin-error": "^1.0.1",
+    "portfinder": "^1.0.13",
     "resolve": "^1.1.7",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
