--- a/packages/liferay-npm-build-tools-common/package.json
+++ b/packages/liferay-npm-build-tools-common/package.json
@@ -9,5 +9,8 @@
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
 		"babel-preset-es2015": "^6.24.1"
+	},
+	"dependencies": {
+		"read-json-sync": "^2.0.0"
 	}
 }
