--- a/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
+++ b/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
@@ -10,6 +10,9 @@
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
 		"babel-preset-es2015": "^6.24.1",
-		"cp-file": "^4.2.0"
+		"recursive-copy": "^2.0.9"
+	},
+	"dependencies": {
+		"liferay-npm-build-tools-common": "2.1.1"
 	}
 }
