--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -29,6 +29,7 @@
 		"gulp-storage": "^1.0.6",
 		"inquirer": "^0.12.0",
 		"liferay-plugin-node-tasks": "^1.0.9",
+		"liferay-theme-deps-6.2": "^7.0.0",
 		"liferay-theme-deps-7.0": "^8.0.0-beta.1",
 		"liferay-theme-deps-7.1": "^8.0.0-beta.1",
 		"lodash": "^3.10.0",
