--- a/packages/liferay-theme-deps-7.1/package.json
+++ b/packages/liferay-theme-deps-7.1/package.json
@@ -8,13 +8,13 @@
     "liferay-frontend-theme-classic-web": "2.0.2",
     "liferay-frontend-theme-styled": "3.0.7",
     "liferay-frontend-theme-unstyled": "3.0.9",
-    "liferay-theme-deps-normalize": "8.0.0-beta.1"
+    "liferay-theme-deps-normalize": "^8.0.0-beta.2"
   },
   "description": "Set of dependencies required by liferay-theme-tasks",
   "license": "ISC",
   "main": "package.json",
   "name": "liferay-theme-deps-7.1",
-  "version": "8.0.0-beta.1",
+  "version": "8.0.0-beta.2",
   "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-deps-7.1",
   "scripts": {
     "install": "node scripts/install.js"
